# auto-memory

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  UPGRADE-COPILOT-CLI.md  copilot-instructions-template.md  install.sh  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: test.yml
deploy/: install.md
docs/: blog-why-auto-memory.md
src/session_recall/: __main__.py  mcp_server.py
src/session_recall/backends/: __init__.py  all.py  copilot.py
src/session_recall/backends/claude_code/: backend.py  detect.py  index.py  install.py  reader.py
src/session_recall/commands/: checkpoints.py  files.py  health.py  index_cc.py  install_mode.py  list_sessions.py  schema_check_cmd.py  search.py  serve.py  show_session.py
src/session_recall/db/: connect.py
src/session_recall/health/: dim_disclosure.py
src/session_recall/tests/: test_cc_reader.py  test_days_filter.py  test_dim_disclosure.py  test_list_sessions.py  test_parser.py  test_schema_check.py  test_search_sanitize.py  test_show_session.py
